--- a/Visit21/app/src/main/res/layout/activity_main.xml
+++ b/Visit21/app/src/main/res/layout/activity_main.xml
@@ -1,76 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    mapbox:umanoDragView="@id/dragview"
+    mapbox:umanoScrollableView="@id/listView"
+    mapbox:umanoPanelHeight="50dp"
+    mapbox:umanoOverlay="false"
+    mapbox:umanoParallaxOffset="100dp"
+    mapbox:umanoShadowHeight="40dp"
+    android:gravity="bottom">
 
-    <com.mapbox.mapboxsdk.maps.MapView
-        android:id="@+id/mapView"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <com.mapbox.mapboxsdk.maps.MapView
+            android:id="@+id/mapView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            mapbox:mapbox_cameraZoom="20"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:orientation="vertical"
+            android:layout_alignParentRight="true">
+
+            <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
+                android:id="@+id/up_down"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/number_picker_bg"
+                mapbox:snp_buttonIconDown="@drawable/ic_down"
+                mapbox:snp_buttonIconUp="@drawable/ic_up"
+                mapbox:snp_maxValue="5"
+                mapbox:snp_minValue="2"
+                mapbox:snp_orientation="vertical"
+                mapbox:snp_stepSize="1"
+                mapbox:snp_value="4"
+                mapbox:snp_valueMarginEnd="8dp"
+                mapbox:snp_valueMarginStart="8dp" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/poicard"
+            android:layout_alignBottom="@id/mapView"
+            android:background="@color/mapboxWhite"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="sample"
+                android:textAlignment="center"
+                android:textSize="80px"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="200px"
+                android:id="@+id/description"
+                android:textAlignment="center"
+                android:text="sample des"
+                android:textSize="70px"
+                />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Start Navigation"
+                android:id="@+id/poinavigatebutton"/>
+
+        </LinearLayout>
+    </RelativeLayout>
+
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        mapbox:mapbox_cameraZoom="20"
-        />
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:orientation="vertical"
-        android:layout_alignParentRight="true">
+        android:id="@+id/dragview"
+        android:clickable="true"
+        android:focusable="false">
 
-        <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
-            android:id="@+id/up_down"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/number_picker_bg"
-            mapbox:snp_buttonIconDown="@drawable/ic_down"
-            mapbox:snp_buttonIconUp="@drawable/ic_up"
-            mapbox:snp_maxValue="5"
-            mapbox:snp_minValue="2"
-            mapbox:snp_orientation="vertical"
-            mapbox:snp_stepSize="1"
-            mapbox:snp_value="4"
-            mapbox:snp_valueMarginEnd="8dp"
-            mapbox:snp_valueMarginStart="8dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="150px"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:background="@color/colorAccent"
+            android:weightSum="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="70px"
+                android:layout_weight="1"
+                android:id="@+id/arrow"
+                android:textStyle="bold"
+                android:text="^"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:id="@+id/arrowText"
+                android:layout_weight="1"
+                android:textSize="40px"
+                android:layout_marginBottom="30px"
+                android:textStyle="bold"
+                android:text="Directory"/>
+        </LinearLayout>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/listView">
+
+        </ListView>
     </LinearLayout>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/poicard"
-        android:layout_alignBottom="@id/mapView"
-        android:background="@color/mapboxWhite"
-        android:visibility="gone">
-
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="sample"
-            android:textAlignment="center"
-            android:textSize="80px"
-            android:textStyle="bold" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="200px"
-            android:id="@+id/description"
-            android:textAlignment="center"
-            android:text="sample des"
-            android:textSize="70px"
-            />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Start Navigation"
-            android:id="@+id/poinavigatebutton"/>
-
-    </LinearLayout>
-
-
-</RelativeLayout>
+</com.sothree.slidinguppanel.SlidingUpPanelLayout>
